<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_sign_up"
    android:orientation="vertical"
    android:padding="10dp"

    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_newname"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_Email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_Email"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_Password"
        app:startIconDrawable="@drawable/ic_baseline_emoji_people_24"
        app:startIconTint="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pno"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:startIconTint="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_pno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_gender"
        android:layout_margin="5dp"/>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:buttonTint="@color/purple"/>

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:buttonTint="@color/purple"/>
        <RadioButton
            android:id="@+id/gender_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:buttonTint="@color/purple"/>


    </RadioGroup>

<Button
    android:id="@+id/btn_submit"
    android:backgroundTint="@color/purple"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:layout_margin="10dp"
    android:layout_gravity="center"/>

    <TextView
        android:id="@+id/sign_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in_now"
        android:textAlignment="center"
        android:textSize="18sp"/>

</LinearLayout>