<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/signIn_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/cu_logo"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/layout_signIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/purple"
        android:hint="@string/email"
        android:paddingVertical="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/signIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/layout_signIn_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_emoji_people_24"
        app:startIconTint="@color/purple"
        android:hint="@string/password"
        android:paddingVertical="5dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/signIn_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/sign_in"
        />

    <TextView
        android:id="@+id/signUp_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Don't have an account? Sign Up now"
        android:gravity="center"/>


</LinearLayout>